gobmkida/c2/make_worms
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:809:12: error: expected expression
*( _OWORD *)( v14 + 192) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:809:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 192) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:810:12: error: expected expression
*( _OWORD *)( v14 + 176) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:810:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 176) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:811:12: error: expected expression
*( _OWORD *)( v14 + 160) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:811:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 160) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:812:12: error: expected expression
*( _OWORD *)( v14 + 144) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:812:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 144) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:813:12: error: expected expression
*( _OWORD *)( v14 + 128) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:813:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 128) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:814:12: error: expected expression
*( _OWORD *)( v14 + 112) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:814:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 112) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:815:12: error: expected expression
*( _OWORD *)( v14 + 96) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:815:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 96) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:816:12: error: expected expression
*( _OWORD *)( v14 + 80) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:816:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 80) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:817:12: error: expected expression
*( _OWORD *)( v14 + 64) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:817:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 64) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:818:12: error: expected expression
*( _OWORD *)( v14 + 48) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:818:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v14 + 48) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:911:25: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'; did you mean 'find_worm_attacks_and_defenses'?
v27 = findlib( j, 241, &find_worm_attacks_and_defenses_libs); 
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                        find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:37:13: note: 'find_worm_attacks_and_defenses' declared here
static void find_worm_attacks_and_defenses(void);
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:927:28: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'; did you mean 'find_worm_attacks_and_defenses'?
v31 = *( int *)( ( char *)&find_worm_attacks_and_defenses_libs + v30); 
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:37:13: note: 'find_worm_attacks_and_defenses' declared here
static void find_worm_attacks_and_defenses(void);
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:1211:26: error: use of undeclared identifier 'byte_9B388C'
if ( ( unsigned __int8)( byte_9B388C[n] - 1) <= 1u 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:1240:26: error: use of undeclared identifier 'byte_9B389F'
if ( ( unsigned __int8)( byte_9B389F[v94] - 1) <= 1u 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:1348:26: error: use of undeclared identifier 'find_worm_threats_libs'; did you mean 'find_worm_threats'?
v115 = findlib( jj, 241, find_worm_threats_libs); 
                         ^~~~~~~~~~~~~~~~~~~~~~
                         find_worm_threats
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:38:13: note: 'find_worm_threats' declared here
static void find_worm_threats(void);
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:1355:8: error: use of undeclared identifier 'find_worm_threats_libs'
v118 = find_worm_threats_libs[( _QWORD)kk]; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/engine/worm.c:1374:8: error: use of undeclared identifier 'find_worm_threats_libs'
v121 = find_worm_threats_libs[( _QWORD)kk]; 
       ^
27 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_worms/src/obj/1/worm.o] Error 1
